# rust-pyO3-logger_swallos_exceptions

./: Cargo.toml  README.md  example.py  pyproject.toml
src/: lib.rs
