[package]
name = "incrementer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "incrementer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.22.0", features = ["chrono"]}
# Async:
tokio = {version = "1.38", features = ["macros", "rt-multi-thread", "time"]}
futures = "0.3.30"
# Error handling:
thiserror = "1.0.65"
# Logging:
pyo3-log = "0.11.0"
log = {version = "0.4.22", features = ["std"] }
